# shine_solana

./: Anchor.toml  Cargo.toml  READ_ME.txt  READ_ME_NEW_DEPLOY.txt  restart.sh  stop.sh
doc/: Deploy.txt  READ_ME.txt  ReadMe.md  TODO  how to getback money after deploy from buffer.txt  how todo minimal size.txt  что содержит utils.txt
doc/sh/: restart.sh
programs/common/: Cargo.toml
programs/common/src/: utils.rs
programs/shine/: Cargo.toml
programs/shine/doc/: READ_ME_NEW_DEPLOY.txt
programs/shine/src/: lib.rs  register_user.rs  say_hello.rs  user_module.rs  users.rs  utils.rs
programs/shine/src/old/: art.new  lib.rs.old  old_test_func  register_user2.rs
programs/shine_payments/: Cargo.toml
programs/shine_payments/dApp/: copyToServer.sh  init.html
programs/shine_payments/src/: investments.rs  lib.rs  nft.rs
programs/shine_users/: Cargo.toml
programs/shine_users/src/: lib.rs  users.rs
scripts/devnet/: README.md  quick_devnet_e2e.js  quick_devnet_e2e_multi.js
